...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_stream"
        app:layout_constraintTop_toTopOf="@+id/button_stream" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_hots"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_stream">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_hots"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1.5dp"
            android:layout_marginBottom="1.5dp" />


...
