...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".room.RoomFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_room_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="@drawable/stroke_type2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
            android:layout_marginEnd="16dp"
            android:text="@string/zero"
            android:textAlignment="textEnd"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_room_follow" />

        <TextView
            android:id="@+id/text_hots_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
...
