<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_nav_home_selector"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/ic_nav_category_selector"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_follow"
        android:icon="@drawable/ic_nav_follow_selector"
        android:title="@string/follow" />

</menu>