<resources>
    <string name="app_name">Kubi Live</string>

    <string name="resolution">畫質設定</string>
    <string name="broadcastTitle">直播標題</string>
    <string name="please_wait">創建直播頻道中 ...</string>
    <string name="send">Send</string>
    <string name="welcome">歡迎加入聊天室 ! :D</string>
    <string name="respect">發言請尊重直播主和觀眾們</string>
    <string name="search_hint">請輸入實況主名字</string>
    <string name="title_top">Kubi</string>
    <string name="title_bottom">Live</string>
    <string name="get_start">Get Started !</string>
    <string name="confirm_message">確定要從名單中除移嗎？</string>
    <string name="confirm">是</string>
    <string name="deny">否</string>
    <string name="close">關閉</string>
    <string name="streaming">實況中</string>
    <string name="online">線上</string>
    <string name="offline">離線</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="loading">Loading...</string>
    <string name="youtube_stream_function">請先到 Youtube 帳號開啟直播相關功能</string>
    <string name="tutorial_page1">先至 Youtube 首頁點選右上方的錄影機圖示後，再點選進行直播。</string>
    <string name="tutorial_page2">點選中間的開始直播按鈕後，將進行身分驗證，通過後約 24 小時就可開啟直播功能。</string>
    <string name="cancel">取消</string>
    <string name="start_stream">開始直播</string>
    <string name="stop_stream">停止直播</string>
    <string name="resolution_480p">480P</string>
    <string name="resolution_720p">720P</string>
    <string name="stream">直播</string>
    <string name="record">錄影</string>
    <string name="mockup_name">Ryu</string>
    <string name="mockup_title">Faker WHAT WAS THAT  -_-</string>
    <string name="zero">0</string>
    <string name="remove">Remove</string>
    <string name="colon">:</string>
    <string name="home">首頁</string>
    <string name="search">探索</string>
    <string name="follow">追隨</string>

</resources>
